Fixed bug with files

--- a/data/index.html
+++ b/data/index.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="style.css">
 <title> Simulation Data Summary </title>
-<img src=C:\Users\Alex\Documents\GitHub\LabII\data\temp\Day0.png>
+<img src=D:\Universidad\DatosII\LabII\data\temp\Day0.png>
 <br>
 <table>
   <tr>
@@ -15,7 +15,7 @@
     <tr>
       <td>1</td>
       <td>1</td>
-      <td>12</td>
+      <td>2</td>
       <td>0</td>
       <td>Si</td>
       <td>No</td>
@@ -24,593 +24,11 @@
     <tr>
       <td>1</td>
       <td>1</td>
-      <td>12</td>
-      <td>1</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td>
-      <td>12</td>
-      <td>2</td>
-      <td>No</td>
-      <td>No</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td>
-      <td>12</td>
-      <td>3</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td>
-      <td>12</td>
-      <td>4</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td>
-      <td>12</td>
-      <td>5</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td>
-      <td>12</td>
-      <td>6</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td>
-      <td>12</td>
-      <td>7</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td>
-      <td>12</td>
-      <td>8</td>
-      <td>No</td>
-      <td>No</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td>
-      <td>12</td>
-      <td>9</td>
-      <td>No</td>
-      <td>No</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td>
-      <td>12</td>
-      <td>10</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>1</td>
-      <td>12</td>
-      <td>11</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-  </table>
-
-<hr>
-<img src=C:\Users\Alex\Documents\GitHub\LabII\data\temp\Day1.png>
-<br>
-<table>
-  <tr>
-      <th>D&#237;a</th>
-      <th>Modo de la simulacion</th>
-      <th>Cantidad de Nodos</th>
-      <th>Etiqueta del Nodo</th>
-      <th>Estado de Salud (Infectado)</th>
-      <th>Tiene Mascarilla</th>
-      <th>Dia de infeccion</th>
-  </tr>
-    <tr>
       <td>2</td>
       <td>1</td>
-      <td>12</td>
-      <td>0</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>0</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>1</td>
-      <td>12</td>
-      <td>1</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>1</td>
-      <td>12</td>
-      <td>2</td>
-      <td>No</td>
-      <td>No</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>1</td>
-      <td>12</td>
-      <td>3</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>1</td>
-      <td>12</td>
-      <td>4</td>
       <td>Si</td>
       <td>Si</td>
       <td>1</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>1</td>
-      <td>12</td>
-      <td>5</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>1</td>
-      <td>12</td>
-      <td>6</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>1</td>
-      <td>12</td>
-      <td>7</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>1</td>
-      <td>12</td>
-      <td>8</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>1</td>
-      <td>12</td>
-      <td>9</td>
-      <td>No</td>
-      <td>No</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>1</td>
-      <td>12</td>
-      <td>10</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>1</td>
-      <td>12</td>
-      <td>11</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>2</td>
-    </tr>
-  </table>
-
-<hr>
-<img src=C:\Users\Alex\Documents\GitHub\LabII\data\temp\Day2.png>
-<br>
-<table>
-  <tr>
-      <th>D&#237;a</th>
-      <th>Modo de la simulacion</th>
-      <th>Cantidad de Nodos</th>
-      <th>Etiqueta del Nodo</th>
-      <th>Estado de Salud (Infectado)</th>
-      <th>Tiene Mascarilla</th>
-      <th>Dia de infeccion</th>
-  </tr>
-    <tr>
-      <td>3</td>
-      <td>1</td>
-      <td>12</td>
-      <td>0</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>0</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>1</td>
-      <td>12</td>
-      <td>1</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>3</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>1</td>
-      <td>12</td>
-      <td>2</td>
-      <td>No</td>
-      <td>No</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>1</td>
-      <td>12</td>
-      <td>3</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>1</td>
-      <td>12</td>
-      <td>4</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>1</td>
-      <td>12</td>
-      <td>5</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>1</td>
-      <td>12</td>
-      <td>6</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>1</td>
-      <td>12</td>
-      <td>7</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>1</td>
-      <td>12</td>
-      <td>8</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>1</td>
-      <td>12</td>
-      <td>9</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>3</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>1</td>
-      <td>12</td>
-      <td>10</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>1</td>
-      <td>12</td>
-      <td>11</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>2</td>
-    </tr>
-  </table>
-
-<hr>
-<img src=C:\Users\Alex\Documents\GitHub\LabII\data\temp\Day3.png>
-<br>
-<table>
-  <tr>
-      <th>D&#237;a</th>
-      <th>Modo de la simulacion</th>
-      <th>Cantidad de Nodos</th>
-      <th>Etiqueta del Nodo</th>
-      <th>Estado de Salud (Infectado)</th>
-      <th>Tiene Mascarilla</th>
-      <th>Dia de infeccion</th>
-  </tr>
-    <tr>
-      <td>4</td>
-      <td>1</td>
-      <td>12</td>
-      <td>0</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>0</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>1</td>
-      <td>12</td>
-      <td>1</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>3</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>1</td>
-      <td>12</td>
-      <td>2</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>4</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>1</td>
-      <td>12</td>
-      <td>3</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>1</td>
-      <td>12</td>
-      <td>4</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>1</td>
-      <td>12</td>
-      <td>5</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>4</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>1</td>
-      <td>12</td>
-      <td>6</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>1</td>
-      <td>12</td>
-      <td>7</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>1</td>
-      <td>12</td>
-      <td>8</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>1</td>
-      <td>12</td>
-      <td>9</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>3</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>1</td>
-      <td>12</td>
-      <td>10</td>
-      <td>No</td>
-      <td>Si</td>
-      <td>-1</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>1</td>
-      <td>12</td>
-      <td>11</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>2</td>
-    </tr>
-  </table>
-
-<hr>
-<img src=C:\Users\Alex\Documents\GitHub\LabII\data\temp\Day4.png>
-<br>
-<table>
-  <tr>
-      <th>D&#237;a</th>
-      <th>Modo de la simulacion</th>
-      <th>Cantidad de Nodos</th>
-      <th>Etiqueta del Nodo</th>
-      <th>Estado de Salud (Infectado)</th>
-      <th>Tiene Mascarilla</th>
-      <th>Dia de infeccion</th>
-  </tr>
-    <tr>
-      <td>5</td>
-      <td>1</td>
-      <td>12</td>
-      <td>0</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>0</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>1</td>
-      <td>12</td>
-      <td>1</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>3</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>1</td>
-      <td>12</td>
-      <td>2</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>4</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>1</td>
-      <td>12</td>
-      <td>3</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>5</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>1</td>
-      <td>12</td>
-      <td>4</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>1</td>
-      <td>12</td>
-      <td>5</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>4</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>1</td>
-      <td>12</td>
-      <td>6</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>1</td>
-      <td>12</td>
-      <td>7</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>1</td>
-      <td>12</td>
-      <td>8</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>2</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>1</td>
-      <td>12</td>
-      <td>9</td>
-      <td>Si</td>
-      <td>No</td>
-      <td>3</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>1</td>
-      <td>12</td>
-      <td>10</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>5</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>1</td>
-      <td>12</td>
-      <td>11</td>
-      <td>Si</td>
-      <td>Si</td>
-      <td>2</td>
     </tr>
   </table>
 
